--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
+                <div class="masthead-subheading">嗨，你好！这里是Tech Children</div>
+                <div class="masthead-subheading">Welcome To Our Website!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">想了解更多？请继续浏览</a>
             </div>
         </header>
         <!-- Services-->
