--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">我们为什么选择树莓派</h2>
+                    <h3 class="section-subheading text-muted">Why we choose raspberrypi?</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -59,7 +59,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">树莓派本就适合初学编程者的学习，若将功能更多地改进，树莓派</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
