--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                                 <h4 class="subheading">就是这个做网站的</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -276,9 +277,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>我们的公众号</h4>
                             <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <p class="text-muted">Lead Developer</p>
                         </div>
                     </div>
                 </div>
