--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>Tech Children</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -27,11 +27,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Picture</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">创作目的</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">产品相关</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">团队介绍</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">学习渠道</a></li>
                     </ul>
                 </div>
             </div>
@@ -84,8 +83,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">产品相关</h2>
+                    <h3 class="section-subheading text-muted">Something About Our Products</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -197,7 +196,7 @@
                                 <h4 class="subheading">就是这个做网站的</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
+                            <div class="timeline-body"><p class="text-muted">微信：woshihuangmiao</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -207,7 +206,7 @@
                                 <h4>绯村剑昕</h4>
                                 <h4 class="subheading">产品工程师</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
                     <li>
@@ -217,7 +216,7 @@
                                 <h4>VC大橙</h4>
                                 <h4 class="subheading">安排整体商业计划</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -227,17 +226,17 @@
                                 <h4>大国宫酱</h4>
                                 <h4 class="subheading">负责审核与商业计划</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                Be Part
+                                我们
                                 <br />
-                                Of Our
+                                都是
                                 <br />
-                                Story!
+                                小可爱！
                             </h4>
                         </div>
                     </li>
@@ -248,8 +247,8 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">学习渠道</h2>
+                    <h3 class="section-subheading text-muted">The Way Of Study</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
@@ -257,9 +256,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>Github</h4>
                             <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                             <p class="text-muted">[点击打开]("https://github.com/")</p>                     
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -276,8 +273,8 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>我们的公众号</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <p class="text-muted">Lead Developer</p>
+                            <p class="text-muted">专门做讲解的公众号呦</p>
+                            <p class="text-muted"></p>
                         </div>
                     </div>
                 </div>
