--- a/index.html
+++ b/index.html
@@ -255,15 +255,16 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>Github</h4>
-                            <p class="text-muted">Lead Designer</p>
-                             <p class="text-muted">[点击打开]("https://github.com/")</p>                     
+                            <p class="text-muted">全球最大的开源社区</p>
+                             <p class="text-muted">网址链接[https://github.com/][https://www.githubs.cn/]</p>                     
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                             <h4>CSDN</h4>
-                            <p class="text-muted">Lead Marketer</p>
+                            <p class="text-muted">专业IT技术社区</p>
+                            <p class="text-muted">网址链接[https://www.csdn.net/]</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
@@ -272,8 +273,8 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>我们的公众号</h4>
-                            <p class="text-muted">专门做讲解的公众号呦</p>
+                            <h4>大橙子的能量基站</h4>
+                            <p class="text-muted">我们用于专门做讲解的公众号呦</p>
                             <p class="text-muted"></p>
                         </div>
                     </div>
