--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@
                             <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
+                     <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>克莱因蓝</h4>
+                                <h4 class="subheading">负责审核与商业计划</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
+                        </div>
+                    </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
