--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/5.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>VC大橙</h4>
+                                <h4>克莱因蓝</h4>
                                 <h4 class="subheading">安排整体商业计划</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted"></p></div>
