--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <div class="container">
                 <div class="masthead-subheading">嗨，你好！这里是Tech Children</div>
                 <div class="masthead-subheading">Welcome To Our Website!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">想了解更多？请继续浏览</a>
+                <div class="masthead-heading text-uppercase">这是我们团队及其产品的介绍网页</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">点击这里开始了解</a>
             </div>
         </header>
         <!-- Services-->
@@ -112,7 +112,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
+                                <div class="portfolio-caption-heading">Stm32单片机</div>
                                 <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
                             </div>
                         </div>
@@ -197,6 +197,7 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
                             <div class="timeline-body"><p class="text-muted">微信：woshihuangmiao</p></div>
+                            <div class="timeline-body"><p class="text-muted">欢迎添加我的QQ咨询相关内容</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -206,6 +207,8 @@
                                 <h4>绯村剑昕</h4>
                                 <h4 class="subheading">产品工程师</h4>
                             </div>
+                            <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
+                            <div class="timeline-body"><p class="text-muted">微信：woshihuangmiao</p></div>
                             <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
@@ -242,11 +245,11 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                我们
+                                未完待续
                                 <br />
-                                都是
+                                  ...
                                 <br />
-                                小可爱！
+                                感谢各位
                             </h4>
                         </div>
                     </li>
