--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">嗨，你好！这里是Tech Children</div>
+                <div class="masthead-heading text-uppercase">嗨，你好！这里是Tech Children</div>
+                <div class="masthead-subheading">这是我们团队及其产品的介绍网页</div>
                 <div class="masthead-subheading">Welcome To Our Website!</div>
-                <div class="masthead-heading text-uppercase">这是我们团队及其产品的介绍网页</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">点击这里开始了解</a>
             </div>
         </header>
@@ -193,8 +193,9 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>三水浪臣</h4>
-                                <h4 class="subheading">就是这个做网站的</h4>
+                                <h4 class="subheading">网页设计</h4>
                             </div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
                             <div class="timeline-body"><p class="text-muted">微信：woshihuangmiao</p></div>
                             <div class="timeline-body"><p class="text-muted">欢迎添加我的QQ咨询相关内容</p></div>
@@ -207,8 +208,9 @@
                                 <h4>绯村剑昕</h4>
                                 <h4 class="subheading">产品工程师</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
-                            <div class="timeline-body"><p class="text-muted">微信：woshihuangmiao</p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
+                            <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
                             <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
@@ -219,7 +221,8 @@
                                 <h4>VC大橙</h4>
                                 <h4 class="subheading">安排整体商业计划</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院20级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ：1504679737</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -229,7 +232,8 @@
                                 <h4>大国宫酱</h4>
                                 <h4 class="subheading">负责审核与商业计划</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ:1207108678</p></div>
                         </div>
                     </li>
                     <li>
@@ -239,7 +243,8 @@
                                 <h4>克莱因蓝</h4>
                                 <h4 class="subheading">安排整体商业计划</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学商学院19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ:543589111</p></div>
                         </div>
                     </li>   
                     <li class="timeline-inverted">
