--- a/index.html
+++ b/index.html
@@ -241,12 +241,51 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>克莱因蓝</h4>
-                                <h4 class="subheading">安排整体商业计划</h4>
+                                <h4 class="subheading">销售总监</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学商学院19级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ:543589111</p></div>
                         </div>
-                    </li>   
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>落宇</h4>
+                                <h4 class="subheading">产品质检总监</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学力学与安全工程19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
+                            <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
+                        </div>
+                    </li>
+                     <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>可爱小学妹</h4>
+                                <h4 class="subheading">网页设计</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学物理学院19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
+                            <div class="timeline-body"><p class="text-muted">微信：woshihuangmiao</p></div>
+                            <div class="timeline-body"><p class="text-muted">欢迎添加我的QQ咨询相关内容</p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>凩唔</h4>
+                                <h4 class="subheading">宣传副总监</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学电气工程学院19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
+                            <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
+                        </div>
+                    </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
