--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase">嗨，你好！这里是Tech Children</div>
+                <div class="masthead-heading text-uppercase">嗨，你好！这里是Tech Teens</div>
                 <div class="masthead-subheading">这是我们团队及其产品的介绍网页</div>
                 <div class="masthead-subheading">Welcome To Our Website!</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">点击这里开始了解</a>
@@ -273,17 +273,14 @@
                             <div class="timeline-body"><p class="text-muted">欢迎添加我的QQ咨询相关内容</p></div>
                         </div>
                     </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>凩唔</h4>
-                                <h4 class="subheading">宣传副总监</h4>
+                                <h4>VC大橙</h4>
+                                <h4 class="subheading">安排整体商业计划</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学电气工程学院19级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
-                            <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院20级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ：1504679737</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
