--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">创作目的</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">产品相关</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">产品相关</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">学习内容</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">团队介绍</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">学习渠道</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">未来方向</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,7 +39,8 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">嗨，你好！这里是Tech Teens</div>
-                <div class="masthead-subheading">这是我们团队及其产品的介绍网页</div>
+                <div class="masthead-subheading">树莓派有声兴趣编程教育</div>
+                <div class="masthead-subheading">想学习编程吗</div>
                 <div class="masthead-subheading">Welcome To Our Website!</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">点击这里开始了解</a>
             </div>
@@ -112,7 +113,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Stm32单片机</div>
+                                <div class="portfolio-caption-heading">Python语言</div>
                                 <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
                             </div>
                         </div>
@@ -127,7 +128,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
+                                <div class="portfolio-caption-heading">C++语言</div>
                                 <div class="portfolio-caption-subheading text-muted">Identity</div>
                             </div>
                         </div>
@@ -142,7 +143,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
+                                <div class="portfolio-caption-heading">神经网络</div>
                                 <div class="portfolio-caption-subheading text-muted">Branding</div>
                             </div>
                         </div>
@@ -276,7 +277,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>VC大橙</h4>
+                                <h4>21学妹</h4>
                                 <h4 class="subheading">安排整体商业计划</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院20级本科生</p></div>
