--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">产品相关</h2>
+                    <h2 class="section-heading text-uppercase">我们需要接触什么</h2>
                     <h3 class="section-subheading text-muted">Something About Our Products</h3>
                 </div>
                 <div class="row">
@@ -274,24 +274,27 @@
                             <div class="timeline-body"><p class="text-muted">欢迎添加我的QQ咨询相关内容</p></div>
                         </div>
                     </li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
+                       <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>21学妹</h4>
-                                <h4 class="subheading">安排整体商业计划</h4>
+                                <h4></h4>
+                                <h4 class="subheading">产品工程师</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院20级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1504679737</p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
+                            <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                未完待续
+                                想加入我们吗？
                                 <br />
                                   ...
                                 <br />
-                                感谢各位
+                                Join in！
                             </h4>
                         </div>
                     </li>
@@ -302,7 +305,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">学习渠道</h2>
+                    <h2 class="section-heading text-uppercase">我们的追求</h2>
                     <h3 class="section-subheading text-muted">The Way Of Study</h3>
                 </div>
                 <div class="row">
@@ -310,8 +313,8 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>Github</h4>
-                            <p class="text-muted">全球最大的开源社区</p>
-                             <p class="text-muted">网址链接[https://github.com/][https://www.githubs.cn/]</p>                     
+                            <p class="text-muted">将编程教育与有声读物有机结合</p>
+                             <p class="text-muted">打造自己的有声资源平台</p>                     
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -389,8 +392,10 @@
                                     <h2 class="text-uppercase">树莓派 4B主板</h2>
                                     <p class="item-intro text-muted">Raspberrypi 4B</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Raspberry Pi(中文名为“树莓派”,简写为RPi，(或者RasPi / RPI) 是为学生计算机编程教育而设计，只有信用卡大小的微型电脑，其系统基于Linux。 随着Windows 10 IoT的发布，我们也将可以用上运行Windows的树莓派。自问世以来，受众多计算机发烧友和创客的追捧，曾经一“派”难求。别看其外表“娇小”，内“心”却很强大，视频、音频等功能通通皆有，可谓是“麻雀虽小，五脏俱全”。
-</p>
+                                    <p>Raspberry Pi(中文名为“树莓派”,简写为RPi，(或者RasPi / RPI) 是为学生计算机编程教育而设
+                                        计，只有信用卡大小的微型电脑，其系统基于Linux。 随着Windows 10 IoT的发布，我们也将可以
+                                        用上运行Windows的树莓派。自问世以来，受众多计算机发烧友和创客的追捧，曾经一“派”难求。别
+                                        看其外表“娇小”，内“心”却很强大，视频、音频等功能通通皆有，可谓是“麻雀虽小，五脏俱全”。</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
