--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Tech Children</title>
+        <title>NOKEYS——巧机天工</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -38,9 +38,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase">嗨，你好！这里是Tech Teens</div>
-                <div class="masthead-subheading">树莓派有声兴趣编程教育</div>
-                <div class="masthead-subheading">想学习编程吗</div>
+                <div class="masthead-heading text-uppercase">嗨，你好！愿NOKEYS给您带来舒适体验！</div>
+                <div class="masthead-subheading">我们是巧机天工有限公司</div>
+                <div class="masthead-subheading">小科技，大改变</div>
                 <div class="masthead-subheading">Welcome To Our Website!</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">点击这里开始了解</a>
             </div>
@@ -49,8 +49,8 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">我们为什么选择树莓派</h2>
-                    <h3 class="section-subheading text-muted">Why we choose raspberrypi?</h3>
+                    <h2 class="section-heading text-uppercase">我们为什么开发NOKEYS</h2>
+                    <h3 class="section-subheading text-muted">Why we make NOKEYS?</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -193,8 +193,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>三水浪臣</h4>
-                                <h4 class="subheading">网页设计</h4>
+                                <h4>宫厚超</h4>
+                                <h4 class="subheading">经理</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
@@ -206,8 +206,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>绯村剑昕</h4>
-                                <h4 class="subheading">产品工程师</h4>
+                                <h4>闫子君</h4>
+                                <h4 class="subheading">文秘</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
@@ -313,8 +313,8 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>Github</h4>
-                            <p class="text-muted">将编程教育与有声读物有机结合</p>
-                             <p class="text-muted">打造自己的有声资源平台</p>                     
+                            <p class="text-muted">首先解决大学生忘带钥匙无法进门的问题</p>
+                             <p class="text-muted">并在实践中不断完善技术，争取做出更好的产品</p>                     
                         </div>
                     </div>
                     <div class="col-lg-4">
